<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Navigation Drawer App</string>
    <string name="navigattion_drawer">Navigation Drawer</string>
    <string name="home_page">Home</string>
    <string name="mensagem">Mensagem</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment Home</string>
    <string name="fragment_login">Fragment Login</string>
    <string name="fragment_message">Fragment Message</string>
    <string name="fragment_settings">Fragment Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ola_bem_vindo_ao_app">Ola bem vindo ao APP</string>
    <string name="bem_vindo_a_home">Bem vindo a home</string>
    <string name="fragment_message1">Fragment Message</string>
    <string name="mensagens">Mensagens</string>
    <string name="fragment_login1">Fragment Login</string>
    <string name="login_no_sistema">Login no sistema</string>
    <string name="fragment_settings1">Fragment Settings</string>
    <string name="configuracoes">Configuracoes</string>
</resources>