<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header"
    >
    <group
        android:checkableBehavior="single"
        android:menuCategory="container"
        >
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_page"
            android:icon="@drawable/baseline_home_24"
            />
        <item
            android:id="@+id/nav_Message"
            android:title="@string/mensagem"
            android:icon="@drawable/baseline_message_24"
            />
        <item
            android:id="@+id/nav_Settings"
            android:title="@string/settings"
            android:icon="@drawable/baseline_settings_24"
            />
    </group>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        >
        <menu>
            <group
                android:menuCategory="container"
                >
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/baseline_login_24"
                    />
            </group>
        </menu>
    </item>
</menu>